--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ data/tcia_images/*.csv filter=lfs diff=lfs merge=lfs -text
 data/tcia_images/*.tsv filter=lfs diff=lfs merge=lfs -text
 data/ct_scans/*.dcm filter=lfs diff=lfs merge=lfs -text
 data/*.zip filter=lfs diff=lfs merge=lfs -text
+data/brca_metabric.tar.gz filter=lfs diff=lfs merge=lfs -text
